--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-*.css linguist-vendored
-static/css/* linguist-vendored
+*.css linguist-vendored linguist-generated
+static/css/* linguist-vendored linguist-generated
